fixed a layout issue

--- a/source_sass/_base.scss
+++ b/source_sass/_base.scss
@@ -222,51 +222,66 @@ p {
 
   background: rgba(0, 0, 0, 0.8);
 
-  #modal {
-    position: relative;
-    top: 50px;
-    margin: auto;
-    width: 900px;
-    height: 660px;
-
-    background: white;
-
-    i {
-      position: absolute;
-      top: 10px;
-      right: 15px;
-
-      color: $background-primary;
-
-      cursor: pointer;
-    }
+  div {
+    display: table;
+    width: 100%;
+    height: 100%;
 
     div {
-      padding-top: 50px;
+      display: table-cell;
+      width: 100%;
       height: 100%;
 
+      vertical-align: middle;
       text-align: center;
-      color: $background-primary;
 
-      span.icon {
-        display: block;
+      #modal {
+        display: inline-block;
+        position: relative;
+        width: 900px;
+        height: 660px;
 
-        font-family: disney;
-        font-size: 120px;
-      }
+        background: white;
 
-      span.title {
-        font-size: 22px;
-      }
+        i {
+          position: absolute;
+          top: 10px;
+          right: 15px;
 
-      p {
-        line-height: 30px;
-      }
+          color: $background-primary;
 
-      img {
-        position: absolute;
-        bottom: 0;
-        left: 0;
+          cursor: pointer;
+        }
+
+        div {
+          display: inline-block;
+          padding-top: 50px;
+          width: 100%;
+
+          text-align: center;
+          color: $background-primary;
+
+          span.icon {
+            display: block;
+
+            font-family: disney;
+            font-size: 120px;
+          }
+
+          span.title {
+            font-size: 22px;
+          }
+
+          p {
+            line-height: 30px;
+          }
+
+          img {
+            position: absolute;
+            bottom: 0;
+            left: 0;
+          }
+        }
       }
     }
   }
@@ -292,11 +307,11 @@ p {
 // Animations
 @keyframes modal-open {
   from {
-    top: 0;
+    top: -50px;
     opacity: 0;
   }
   to {
-    top: 50px;
+    top: 0;
     opacity: 1;
   }
 }
